use new edge computing logic

--- a/src/deepqmc/conf/ansatz/deeperwin.yaml
+++ b/src/deepqmc/conf/ansatz/deeperwin.yaml
@@ -96,6 +96,6 @@ omni_factory:
         - residual
         - node_up
         - node_down
-        - edge_ee
-        - edge_ne
+        - convolution_ee
+        - convolution_ne
       w_for_ne: false
