--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -114,7 +114,7 @@ omni_factory:
       deep_features: false
       update_rule: featurewise
       update_features: 
-        - edge_same
-        - edge_anti
-        - edge_ne
+        - convolution_same
+        - convolution_anti
+        - convolution_ne
   
