--- a/src/deepqmc/conf/config.yaml
+++ b/src/deepqmc/conf/config.yaml
@@ -2,7 +2,7 @@ defaults:
   - _self_
   - optional .@_here_: deepqmc
   - task: train
-  - ansatz: paulinet
+  - ansatz: default
   - hamil: qc
   - override hydra/job_logging: custom
   - override hydra/help: custom
