separate residual to one and two particle residual
This allows to choose a residual only for one of them. E.g. the code
implemented in DeepErwin uses only two_particle_residual in practice.

--- a/src/deepqmc/conf/ansatz/deeperwin.yaml
+++ b/src/deepqmc/conf/ansatz/deeperwin.yaml
@@ -74,7 +74,8 @@ omni_factory:
           _target_: jax.numpy.tanh
           _partial_: true
         w_init: deeperwin
-      residual:
+      one_particle_residual: false
+      two_particle_residual:
         _target_: deepqmc.hkext.ResidualConnection
         normalize: true
       convolution: true
