--- a/src/deepqmc/conf/ansatz/ferminet.yaml
+++ b/src/deepqmc/conf/ansatz/ferminet.yaml
@@ -88,7 +88,10 @@ omni_factory:
             _target_: jax.numpy.tanh
             _partial_: true
           w_init: default
-      residual:
+      one_particle_residual:
+        _target_: deepqmc.hkext.ResidualConnection
+        normalize: true
+      two_particle_residual:
         _target_: deepqmc.hkext.ResidualConnection
         normalize: true
       convolution: false
