separate residual to one and two particle residual
This allows to choose a residual only for one of them. E.g. the code
implemented in DeepErwin uses only two_particle_residual in practice.

--- a/src/deepqmc/conf/ansatz/ferminet.yaml
+++ b/src/deepqmc/conf/ansatz/ferminet.yaml
@@ -89,7 +89,10 @@ omni_factory:
             _target_: jax.numpy.tanh
             _partial_: true
           init: ferminet
-      residual:
+      one_particle_residual:
+        _target_: deepqmc.hkext.ResidualConnection
+        normalize: true
+      two_particle_residual:
         _target_: deepqmc.hkext.ResidualConnection
         normalize: true
       convolution: false
