--- a/src/deepqmc/conf/ansatz/default.yaml
+++ b/src/deepqmc/conf/ansatz/default.yaml
@@ -104,7 +104,10 @@ omni_factory:
             _target_: jax.numpy.tanh
             _partial_: true
           init: default
-      residual:
+      one_particle_residual:
+        _target_: deepqmc.hkext.ResidualConnection
+        normalize: true
+      two_particle_residual:
         _target_: deepqmc.hkext.ResidualConnection
         normalize: true
       convolution: true
