--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -108,9 +108,10 @@ omni_factory:
             _target_: jax.numpy.tanh
             _partial_: true
           init: default
-      residual:
+      one_particle_residual:
         _target_: deepqmc.hkext.ResidualConnection
         normalize: false
+      two_particle_residual: false
       convolution: true
       deep_features: false
       update_rule: featurewise
