--- a/src/deepqmc/conf/ansatz/ferminet.yaml
+++ b/src/deepqmc/conf/ansatz/ferminet.yaml
@@ -40,7 +40,7 @@ omni_factory:
     _partial_: true
     n_interactions: 4
     positional_electron_embeddings: true
-    atom_type_embeddings: false
+    nuclei_embedding: null
     two_particle_stream_dim: 32
     edge_types:
     - up
