--- a/tests/conf/gnn.yaml
+++ b/tests/conf/gnn.yaml
@@ -2,7 +2,12 @@ _target_: deepqmc.gnn.electron_gnn.ElectronGNN
 _partial_: true
 n_interactions: 4
 positional_electron_embeddings: false
-atom_type_embeddings: false
+nuclei_embedding:
+  _target_: deepqmc.gnn.electron_gnn.NucleiEmbedding
+  _partial_: true
+  embedding_dim: 8
+  atom_type_embedding: false
+  subnet_type: embed
 two_particle_stream_dim: 8
 edge_types:
 - same
