--- a/src/deepqmc/conf/ansatz/default.yaml
+++ b/src/deepqmc/conf/ansatz/default.yaml
@@ -56,7 +56,7 @@ omni_factory:
     _partial_: true
     n_interactions: 3
     positional_electron_embeddings: true
-    atom_type_embeddings: true
+    atom_type_embeddings: false
     two_particle_stream_dim: 32
     edge_types:
     - same
