--- a/src/deepqmc/conf/ansatz/paulinet.yaml
+++ b/src/deepqmc/conf/ansatz/paulinet.yaml
@@ -59,7 +59,12 @@ omni_factory:
     _partial_: true
     n_interactions: 4
     positional_electron_embeddings: false
-    atom_type_embeddings: false
+    nuclei_embedding:
+      _target_: deepqmc.gnn.electron_gnn.NucleiEmbedding
+      _partial_: true
+      embedding_dim: 64
+      atom_type_embedding: false
+      subnet_type: embed
     two_particle_stream_dim: 64
     edge_types:
     - same
