add self_interaction config option
It determines wheter we include the interaction of electrons with
themselves in the `same` and `anti` edges. Warning: the self interaction
is always considered in the `up` and `down` edges, regardless of the
value of `self_interaction`.

--- a/src/deepqmc/conf/ansatz/deeperwin.yaml
+++ b/src/deepqmc/conf/ansatz/deeperwin.yaml
@@ -50,6 +50,7 @@ omni_factory:
       embedding_dim: 32
       atom_type_embedding: true
       subnet_type: mlp
+    self_interaction: true
     edge_types:
     - same
     - anti
