--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -66,6 +66,7 @@ omni_factory:
       atom_type_embedding: false
       subnet_type: embed
     two_particle_stream_dim: 8
+    self_interaction: false
     edge_types:
     - same
     - anti
