--- a/tests/conf/gnn.yaml
+++ b/tests/conf/gnn.yaml
@@ -9,6 +9,7 @@ nuclei_embedding:
   atom_type_embedding: false
   subnet_type: embed
 two_particle_stream_dim: 8
+self_interaction: false
 edge_types:
 - same
 - anti
