add self_interaction config option
It determines wheter we include the interaction of electrons with
themselves in the `same` and `anti` edges. Warning: the self interaction
is always considered in the `up` and `down` edges, regardless of the
value of `self_interaction`.

--- a/src/deepqmc/conf/ansatz/default.yaml
+++ b/src/deepqmc/conf/ansatz/default.yaml
@@ -62,6 +62,7 @@ omni_factory:
       atom_type_embedding: true
       subnet_type: embed
     two_particle_stream_dim: 32
+    self_interaction: false
     edge_types:
     - same
     - anti
