--- a/src/deepqmc/conf/ansatz/default.yaml
+++ b/src/deepqmc/conf/ansatz/default.yaml
@@ -118,6 +118,7 @@ omni_factory:
         normalize: true
       convolution: true
       deep_features: shared
+      mean_aggregate_edges: true
       update_rule: concatenate
       update_features: 
       - residual
