--- a/tests/conf/gnn.yaml
+++ b/tests/conf/gnn.yaml
@@ -63,6 +63,7 @@ layer_factory:
   two_particle_residual: false
   convolution: true
   deep_features: false
+  mean_aggregate_edges: true
   update_rule: featurewise
   update_features: 
     - edge_same
