add mean_aggregate_edges config option
Since DeepErwin sums the electron-electron and nuclei-electron edges
instead of taking their mean, this option is introduced to help
reproducing DeepErwin.

--- a/src/deepqmc/conf/ansatz/deeperwin.yaml
+++ b/src/deepqmc/conf/ansatz/deeperwin.yaml
@@ -87,6 +87,7 @@ omni_factory:
         normalize: true
       convolution: true
       deep_features: separate
+      mean_aggregate_edges: false
       update_rule: concatenate
       update_features: 
         - residual
