add softplus_zeta option
Instead of taking the absolute value of the envelope exponents,
DeepErwin passes the `zeta` parameter through `softplus`. This means
that by default KFAC can't recognize this layer as shift_and_scale. The
manual registration of this layer is not implemented for us, e.g. if
`softplus_zeta=True`, the zeta parameter will be `Orphan` with KFAC.

--- a/src/deepqmc/conf/ansatz/default.yaml
+++ b/src/deepqmc/conf/ansatz/default.yaml
@@ -7,6 +7,7 @@ envelope:
   per_shell: false
   per_orbital_exponent: true
   spin_restricted: false
+  softplus_zeta: false
 backflow_op:
   _target_: deepqmc.wf.nn_wave_function.nn_wave_function.BackflowOp
   _partial_: true
