ignore pydocstyle error D401

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,5 +38,5 @@ omit =
     */deepqmc/extra/**.py
 
 [pydocstyle]
-add-ignore = D100,D102,D104,D105,D107,D202
+add-ignore = D100,D102,D104,D105,D107,D202,D401
 ignore-decorators = wraps
