--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -7,6 +7,7 @@ envelope:
   per_shell: true
   per_orbital_exponent: false
   spin_restricted: true
+  init_to_ones: false
 backflow_op:
   _target_: deepqmc.wf.nn_wave_function.nn_wave_function.BackflowOp
   _partial_: true
