implement the exact FermiNet parameter initialization (#145)
change the parameter initialization to align with the FermiNet codebase

--- a/src/deepqmc/conf/ansatz/default.yaml
+++ b/src/deepqmc/conf/ansatz/default.yaml
@@ -7,6 +7,7 @@ envelope:
   per_shell: false
   per_orbital_exponent: true
   spin_restricted: false
+  init_to_ones: true
 backflow_op:
   _target_: deepqmc.wf.nn_wave_function.nn_wave_function.BackflowOp
   _partial_: true
@@ -38,7 +39,7 @@ omni_factory:
       bias: false
       last_linear: true
       activation: null
-      w_init: default
+      init: default
   backflow_factory:  
     _target_: deepqmc.wf.nn_wave_function.omni.Backflow
     _partial_: true
@@ -49,7 +50,7 @@ omni_factory:
       bias: false
       last_linear: true
       activation: null
-      w_init: default
+      init: default
   gnn_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
@@ -91,7 +92,7 @@ omni_factory:
         activation:
           _target_: jax.numpy.tanh
           _partial_: true
-        w_init: default
+        init: default
       subnet_factory_by_lbl:
         g:
           _target_: deepqmc.hkext.MLP
@@ -102,7 +103,7 @@ omni_factory:
           activation:
             _target_: jax.numpy.tanh
             _partial_: true
-          w_init: default
+          init: default
       residual:
         _target_: deepqmc.hkext.ResidualConnection
         normalize: true
