--- a/src/deepqmc/conf/task/opt/kfac.yaml
+++ b/src/deepqmc/conf/task/opt/kfac.yaml
@@ -2,10 +2,9 @@ _target_: kfac_jax.Optimizer
 _partial_: true
 learning_rate_schedule:
   _target_: deepqmc.utils.InverseSchedule
-  init_value: 0.01
-  decay_rate: 5000
+  init_value: 0.05
+  decay_rate: 10000
 norm_constraint: 0.001
 damping_schedule:
-  _target_: deepqmc.utils.InverseSchedule
-  init_value: 0.001
-  decay_rate: 5000
+  _target_: deepqmc.utils.ConstantSchedule
+  value: 0.001
