--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -21,7 +21,7 @@ conf_coeff:
   _target_: haiku.Linear
   _partial_: true
   with_bias: false
-  init:
+  w_init:
     _target_: jax.numpy.ones
     _partial_: true
 omni_factory:
