--- a/src/deepqmc/conf/ansatz/default.yaml
+++ b/src/deepqmc/conf/ansatz/default.yaml
@@ -16,7 +16,9 @@ backflow_op:
 n_determinants: 16
 full_determinant: true
 cusp_electrons: true
-cusp_alpha: 10
+cusp_alpha_electrons: 10
+cusp_nuclei: false
+cusp_alpha_nuclei: null
 backflow_transform: mult
 conf_coeff:
   _target_: haiku.Linear
