--- a/src/deepqmc/conf/task/train.yaml
+++ b/src/deepqmc/conf/task/train.yaml
@@ -7,3 +7,7 @@ ansatz: ${ansatz}
 steps: 1000
 sample_size: 1000
 seed: 0
+metric_logger:
+  _target_: deepqmc.log.TensorboardMetricLogger
+  _partial_: true
+  period: 10
