--- a/src/deepqmc/conf/ansatz/ferminet.yaml
+++ b/src/deepqmc/conf/ansatz/ferminet.yaml
@@ -82,31 +82,23 @@ omni_factory:
           _target_: jax.numpy.tanh
           _partial_: true
         init: ferminet
-      subnet_factory_by_lbl:
-        w:
-          _target_: deepqmc.hkext.MLP
-          _partial_: true
-          hidden_layers: ['log', 1]
-          bias: false
-          last_linear: false
-          activation:
-            _target_: jax.numpy.tanh
-            _partial_: true
-          init: ferminet
       one_particle_residual:
         _target_: deepqmc.hkext.ResidualConnection
         normalize: true
       two_particle_residual:
         _target_: deepqmc.hkext.ResidualConnection
         normalize: true
-      convolution: false
       deep_features: shared
-      mean_aggregate_edges: true
       update_rule: concatenate
       update_features: 
-      - residual
-      - node_up
-      - node_down
-      - edge_up
-      - edge_down
+      - _target_: deepqmc.gnn.update_features.ResidualUpdateFeature
+        _partial_: true
+      - _target_: deepqmc.gnn.update_features.NodeSumUpdateFeature
+        _partial_: true
+        node_types: [up, down]
+        normalize: true
+      - _target_: deepqmc.gnn.update_features.EdgeSumUpdateFeature
+        _partial_: true
+        edge_types: [up, down]
+        normalize: true
   
