psiformer electron embed and attention

--- a/tests/conf/gnn.yaml
+++ b/tests/conf/gnn.yaml
@@ -2,6 +2,7 @@ _target_: deepqmc.gnn.electron_gnn.ElectronGNN
 _partial_: true
 n_interactions: 4
 positional_electron_embeddings: false
+spin_electron_embeddings: false
 nuclei_embedding:
   _target_: deepqmc.gnn.electron_gnn.NucleiEmbedding
   _partial_: true
