--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -69,6 +69,7 @@ omni_factory:
     n_interactions: 1
     positional_electron_embeddings: false
     spin_electron_embeddings: false
+    project_initial_electron_embedding: false
     nuclei_embedding:
       _target_: deepqmc.gnn.electron_gnn.NucleiEmbedding
       _partial_: true
