--- a/src/deepqmc/conf/ansatz/psiformer.yaml
+++ b/src/deepqmc/conf/ansatz/psiformer.yaml
@@ -49,18 +49,21 @@ omni_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
     n_interactions: 2
-    spin_electron_embeddings: true
-    positional_electron_embeddings:
-      ne:
-        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
-        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
-          powers: [1]
-          log_rescale: true
-        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
-          log_rescale: true
     nuclei_embedding: null
-    project_initial_electron_embedding: true
+    electron_embedding:
+      _target_: deepqmc.gnn.electron_gnn.ElectronEmbedding
+      _partial_: true
+      positional_embeddings:
+        ne:
+          _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+          edge_features:
+          - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+            powers: [1]
+            log_rescale: true
+          - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
+            log_rescale: true
+      use_spin: true
+      project_to_embedding_dim: true
     two_particle_stream_dim: 32
     self_interaction: true
     edge_types: []
@@ -71,18 +74,7 @@ omni_factory:
       subnet_factory:
         _target_: deepqmc.hkext.Identity
         _partial_: true
-        # _target_: deepqmc.hkext.MLP
-        # _partial_: true
-        # hidden_layers: ['log', 2]
-        # bias: true
-        # last_linear: false
-        # activation:
-        #   _target_: jax.numpy.tanh
-        #   _partial_: true
-        # init: ferminet
       one_particle_residual: false
-        # _target_: deepqmc.hkext.ResidualConnection
-        # normalize: false
       two_particle_residual: false
       deep_features: false
       update_rule: concatenate
