--- a/src/deepqmc/conf/ansatz/deeperwin.yaml
+++ b/src/deepqmc/conf/ansatz/deeperwin.yaml
@@ -43,20 +43,25 @@ omni_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
     n_interactions: 4
-    positional_electron_embeddings:
-      ne:
-        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
-        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
-          powers: [1]
-        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
-    two_particle_stream_dim: 32
     nuclei_embedding:
       _target_: deepqmc.gnn.electron_gnn.NucleiEmbedding
       _partial_: true
       embedding_dim: 32
       atom_type_embedding: true
       subnet_type: embed
+    electron_embedding:
+      _target_: deepqmc.gnn.electron_gnn.ElectronEmbedding
+      _partial_: true
+      positional_embeddings:
+        ne:
+          _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+          edge_features:
+          - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+            powers: [1]
+          - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
+      use_spin: false
+      project_to_embedding_dim: false
+    two_particle_stream_dim: 32
     self_interaction: true
     edge_types:
     - same
