--- a/src/deepqmc/conf/ansatz/ferminet.yaml
+++ b/src/deepqmc/conf/ansatz/ferminet.yaml
@@ -12,7 +12,7 @@ envelope:
 backflow_op:
   _target_: deepqmc.wf.nn_wave_function.nn_wave_function.BackflowOp
   _partial_: true
-  # mult_act: '${eval:"lambda x: x"}'
+  mult_act: '${eval:"lambda x: x"}'
 n_determinants: 16
 full_determinant: true
 cusp_electrons: false
@@ -41,13 +41,18 @@ omni_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
     n_interactions: 4
-    positional_electron_embeddings:
-      ne:
-        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
-        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
-          powers: [1]
-        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
+    electron_embedding:
+      _target_: deepqmc.gnn.electron_gnn.ElectronEmbedding
+      _partial_: true
+      positional_embeddings:
+        ne:
+          _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+          edge_features:
+          - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+            powers: [1]
+          - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
+      use_spin: false
+      project_to_embedding_dim: false
     nuclei_embedding: null
     two_particle_stream_dim: 32
     self_interaction: true
