--- a/src/deepqmc/conf/task/train_ferminet.yaml
+++ b/src/deepqmc/conf/task/train_ferminet.yaml
@@ -6,7 +6,8 @@ hamil: ${hamil}
 ansatz: ${ansatz}
 mols: ${hamil.mol}
 steps: 100000
-sample_size: 4096
+molecule_batch_size: 1
+electron_batch_size: 4096
 seed: 0
 pretrain_steps: 1000
 pretrain_kwargs:
