refactor cusps to be more modular

--- a/src/deepqmc/conf/ansatz/paulinet.yaml
+++ b/src/deepqmc/conf/ansatz/paulinet.yaml
@@ -9,10 +9,22 @@ backflow_op:
   _partial_: true
 n_determinants: 16
 full_determinant: false
-cusp_electrons: true
-cusp_alpha_electrons: 10.0
-cusp_nuclei: true
-cusp_alpha_nuclei: 10.0
+cusp_electrons:
+  _target_: deepqmc.wf.nn_wave_function.cusp.ElectronicCuspAsymptotic
+  _partial_: true
+  same_scale: 0.25
+  anti_scale: 0.5
+  alpha: 10.0
+  trainable_alpha: false
+  cusp_function:
+    _target_: deepqmc.wf.nn_wave_function.cusp.DeepQMCCusp
+cusp_nuclei:
+  _target_: deepqmc.wf.nn_wave_function.cusp.NuclearCuspAsymptotic
+  _partial_: true
+  alpha: 1.0
+  trainable_alpha: false
+  cusp_function:
+    _target_: deepqmc.wf.nn_wave_function.cusp.DeepQMCCusp
 backflow_transform: both
 conf_coeff:
   _target_: haiku.Linear
